HotFix: Fix alignments for: ID Segment, More/Fewer button on concordance, Edit & Cancel on Glossary

--- a/public/css/sass/components/header/qaComponent.scss
+++ b/public/css/sass/components/header/qaComponent.scss
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   float: left;
-  margin-top: 3px;
+  margin-top: 1px;
 }
 
 .qa-container {
